RESOLVED FIXED71020
[EFL] Fix variable renaming issue inside ewk_view.cpp
https://bugs.webkit.org/show_bug.cgi?id=71020
Summary [EFL] Fix variable renaming issue inside ewk_view.cpp
Gustavo Lima Chaves
Reported 2011-10-27 08:49:21 PDT
[EFL] Fix variable renaming issue inside ewk_view.cpp
Attachments
Patch (1.30 KB, patch)
2011-10-27 08:52 PDT, Gustavo Lima Chaves
no flags
Patch (1.30 KB, patch)
2011-10-27 09:05 PDT, Gustavo Lima Chaves
no flags
Gustavo Lima Chaves
Comment 1 2011-10-27 08:52:13 PDT
WebKit Review Bot
Comment 2 2011-10-27 08:54:07 PDT
Attachment 112689 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/efl/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/efl/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gustavo Lima Chaves
Comment 3 2011-10-27 09:05:07 PDT
Gyuyoung Kim
Comment 4 2011-10-27 18:40:54 PDT
Comment on attachment 112692 [details] Patch LGTM.
WebKit Review Bot
Comment 5 2011-10-27 19:48:03 PDT
Comment on attachment 112692 [details] Patch Clearing flags on attachment: 112692 Committed r98680: <http://trac.webkit.org/changeset/98680>
WebKit Review Bot
Comment 6 2011-10-27 19:48:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.