[EFL] Fix variable renaming issue inside ewk_view.cpp https://bugs.webkit.org/show_bug.cgi?id=71020

Unreviewed build fix.

Patch by Gustavo Lima Chaves <glima@profusion.mobi> on 2011-10-27

* ewk/ewk_view.cpp:
(ewk_view_js_object_add):

Canonical link: https://commits.webkit.org/87305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98680 268f45cc-cd09-0410-ab3c-d52691b4dbfc