Source/WebKit/efl/ewk/ewk_view.cpp
@@ -3694,7 +3694,7 @@ Eina_Bool ewk_view_js_object_add(Evas_Object* ewkView, Ewk_JS_Object* object, co
     JSC::Identifier id = JSC::Identifier(executeState, objectName);
 
     JSC::PutPropertySlot slot;
-    window->methodTable()->put(window, execState, id, runtimeObject, slot);
+    window->methodTable()->put(window, executeState, id, runtimeObject, slot);
     return EINA_TRUE;
 #else
     return EINA_FALSE;
